prototypes/scss/structs/footer.scss
.footer {
  font-family: $font-cachet-medium;
  background: $color-gray-c;
  color: $color-white;
  width: 100%;

  .inner-footer {
    @extend .container;
    @extend %decor--flex;
    @extend %decor--flex-wrap;
    @extend %decor--align-start;
    padding: 0 0 30px 0;

    &--left {
      @extend %decor--flex;
      @extend %decor--justify-start;
      border-bottom: 1px solid $color-gray-b;
      width: 100%;

      @include breakpoint(tablet) {
        width: 60%;
        border-bottom: none;
      }
    }

    &--right {
      padding: 24px 15px 0;

      .block-share,
      .block-subscribe,
      .block-description {
        overflow: hidden;
      }
      @include breakpoint(tablet) {
        width: 40%;
        clear: both;
      }

    }

    &--bottom {
      @extend %decor--flex;
      @extend %decor--flex-wrap;
      padding: 0 15px;
      font-size: 12px;
      font-family: $font-family-sans-serif;
      line-height: lh(18, 12);

      @include breakpoint(tablet) {
        padding: 0;
        width: 100%;
      }

      p {
        margin: 0;
      }


      .col-right {
        order: 1;

        @include breakpoint(tablet) {
          order: initial;
          width: 40%;
          padding: 0 15px;
        }
      }

      .col-left {
        order: 2;

        @include breakpoint(tablet) {
          order: initial;
          width: 60%;
        }
      }
    }

    &--nav {
      padding: 20px 0 0 15px;
      overflow: hidden;

      ul {
        list-style: none;
        padding: 0 24px 0 0;
        margin-right: -15px;

        @include breakpoint(tablet) {
          margin-right: 0;
          padding: 0;
        }

        li {
          margin: 0 0 14px 0;

          li {
            margin: 0;
          }
        }

        a {
          font-size: 18px;
          line-height: lh(26, 18);
          text-transform: uppercase;
          color: inherit;
          display: inline-block;
          vertical-align: top;
        }

        ul {
          a {
            font-size: 14px;
            line-height: 1.7;
            text-transform: capitalize;
          }
        }
      }

      .col-lg-3 {
        + .col-lg-3 {
          ul {
            border-top: 1px solid $color-gray-b;
            padding-top: 14px;

            @include breakpoint(tablet){
              border-top: none;
              padding-top: 0;
            }
          }
        }
      }
    }

    .logo {
      max-width: 102px;
      padding: 20px 20px 0 15px;

      img {
        // For IE11 compatibility
        height: auto;
        width: auto;
        max-height: 51px;
        max-width: 67px;
      }

      //@include breakpoint(tablet){
        display: none;
      //}

      @include breakpoint(laptop){
        display: block;
      }

      .top-navs__language-switcher {
        display: none;
      }
    }

    @include breakpoint(tablet){
    }
  }
}

.block-share {
  margin: 0 0 20px 0;

  a {
    width: 32px;
    height: 32px;
    display: block;
    background-color: $color-white;
    border-radius: 50%;
    position: relative;

    @include text-hide();

    &:before {
      @include pseudo-block($top: 50%, $left: 50%);
      @include icon-center($position: (top, left));
    }
  }

  ul {
    @extend %decor--flex;
    padding: 0;
    margin: 0;
    list-style: none;
  }

  li {
    margin: 0 30px 0 0;
  }

  .item-share {
    &--facebook {
      &:before {
        @include sprite(icon-facebook-f);
      }
    }

    &--twitter {
      &:before {
        @include sprite(icon-twitter);
      }
    }

    &--youtube {
      &:before {
        @include sprite(icon-youtube);
      }
    }

    &--uwa {
      &:before {
        content: url(../images/logo_footer.svg);
        vertical-align: -12px;
        padding-right: 15px;
      }
    }
  }
}

.block-subscribe {
  @extend %decor--flex;
  @extend %decor--align-end;
  @extend %decor--flex-wrap;
  margin: 0 0 14px 0;

  form {
    @extend %decor--flex;
    @extend %decor--align-end;
    @extend %decor--flex-wrap;
  }

  h3 {
    font-size: 20px;
    font-weight: normal;
    line-height: lh(22.1, 20);
    display: block;
    margin: 0 0 14px 0;
    white-space: nowrap;
    width: 100%;
  }

  .form-text {
    font-size: 12px;
    font-style: italic;
    font-weight: normal;
    line-height: lh(22.1, 12);
    border: none;
    display: block;
    width: 100%;
    padding: 9px;
    color: $color-gray-b;
    outline: none;
  }

  .form-item {
    width: calc(100% - 96px);

    label {
      display: none;
    }
  }

  .form-actions {
    width: 96px;
  }

  .button {
    font-size: 16px;
    line-height: lh(22, 16);
    text-transform: uppercase;
    border-radius: 0;
    display: block;
    width: 100%;
    padding-top: 7px;
    padding-bottom: 7px;
    height: 34px;
    background-color: $color-blue;
    background-image: none;
    outline: none;
    border: none;

    &:hover {
      color: $color-white;
    }

    &:focus {
      outline: none;
    }
  }
}

.block-description {
  font-family: $font-family-sans-serif;
  font-size: 12px;
  line-height: lh(18, 12);

  p {
    margin: 0;
  }
}

#block-footeraddressblock {
  font-family:  $font-family-sans-serif;
  font-size: 12px;
  line-height: lh(18, 12);
  clear: both;
  // Mobile  first
  position: relative;
  top: 15px;
  height: 10px;
  padding: 0px 15px;

  @include breakpoint(tablet) {
    float: right;
    clear: both;
    width: 40%;
      //top: 0px;
  }

  @media (min-width: 845px) and (max-width: 1090px) {
    float: right;
    clear: both;
    width: 40%;

  }
  @include breakpoint(laptop) {
    position: inherit;
    top: 0px;
    float: left;
    padding: 0px 115px;
    width: 60%;
  }
  .block-share {
    padding-top: 22px;
  }
}

#block-footerunitedwayagencyblock {
  //margin-left: 10px;
  padding: 0px 15px;
  // Mobile first
  position: relative;
  top: -40px;
  height: 40px;
  @include breakpoint(laptop) {
    //float: left;
    position: inherit;
    top:0;
  }
  @include breakpoint(tablet) {
    float: right;
    clear: both;
    width: 40%;
    top: -40px;
  }
  //@media (min-width: 845px) and (max-width: 1090px) {
  //  float: right;
  //  clear: both;
  //  width: 40%;
  //
  //}
}

//Footer social icons centered on mobile
#block-footersocialblock {
  @include breakpoint(mobileonly) {
    text-align: center;
    ul {
      display: inline-block;
    }
    li {
      margin: 0 15px 0 15px;
      float: left;
    }
  }
}

#block-footercopyrightblock {
  padding-top: 12px;
  padding-bottom: 12px;
  .field-sb-body p {
    max-width: 350px;
  }
}

.inner-footer--address {
  width: 100%;
  padding: 24px 15px 0;
  .item-share--uwa {
    font-family: $font-family-sans-serif;
    font-size: 12px;
    line-height: lh(18, 12);
  }
}

